# NetIntel

./: CLAUDE.md  README.md  Test.xml  index.html  merge-nmap.bat  merge-nmap.sh  nmap-intel  nmap-intel.bat  nmap-intel.xsl  plan.md  report.html
examples/: README.md  report.html  sample-vuln-db.json
netbox-bridge/: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  pyproject.toml
netbox-bridge/dev/: Makefile  README.md  capture_fixtures.py  end_to_end.py  load_es_so_fixtures.py  load_opensearch_fixtures.py  seed.py
netbox-bridge/netbox_bridge/: _retry.py  classify.py  cli.py  client.py  config.py  discover.py  init.py  matcher.py  model.py  observation_db.py  opensearch.py  oui.py  pipeline.py  probe.py  upsert.py
netbox-bridge/netbox_bridge/parsers/: nessus.py  nmap.py
netbox-bridge/netbox_bridge/sources/: _common.py  malcolm.py  security_onion.py  suricata.py
netbox-bridge/tests/: test_classify.py  test_cli.py  test_client.py  test_discover.py  test_init.py  test_malcolm_source.py  test_matcher.py  test_netbox_customfield_upstream.py  test_netbox_tagcolor_upstream.py  test_opensearch.py  test_oui.py  test_parsers.py  test_payload_contracts.py  test_pipeline.py  test_probe.py  test_retry.py  test_security_onion_source.py  test_suricata_source.py  test_suricata_upstream.py  test_upsert.py  test_zeek_protocol_emissions.py
netbox-bridge/tests/fixtures/: malcolm_known_services_response.json  security_onion_conn_response.json  suricata_alerts_response.json
netintel-app/: app.go  go.mod  helpers.go  main.go  wails.json
tools/: nvd-to-vulndb.py
(+20 files in other folders)
