[project]
name = "netbox-bridge"
version = "0.0.1"
description = "Ingest Nmap/Nessus scan output into NetBox."
requires-python = ">=3.11"
dependencies = [
    "pynetbox>=7.4",
    "click>=8.1",
    "pydantic>=2.5",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
netbox-bridge = "netbox_bridge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["netbox_bridge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
